force-app/main/default/objects/QTB_Remit_To__c/QTB_Remit_To__c.object-meta.xml
<CustomObject>
    <label>Remit To</label>
    <nameField>
        <label>Remit to Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remits To</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>