force-app/main/default/objects/QTB_Remit_To__c/fields/QTB_Address3__c.field-meta.xml
<CustomField>
    <fullName>QTB_Address3__c</fullName>
    <label>Address3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>