force-app/main/default/objects/QTB_Remit_To__c/fields/QTB_County__c.field-meta.xml
<CustomField>
    <fullName>QTB_County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>