force-app/main/default/objects/QTB_Remit_To__c/fields/QTB_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Remits To</relationshipLabel>
    <relationshipName>Remits_To</relationshipName>
    <type>Lookup</type>
</CustomField>