force-app/main/default/objects/QTB_Remit_To__c/fields/QTB_PIN_Code_Mapping_Required__c.field-meta.xml
<CustomField>
    <fullName>QTB_PIN_Code_Mapping_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PIN Code Mapping Required</label>
    <type>Checkbox</type>
</CustomField>