force-app/main/default/objects/QTB_Remit_To__c/fields/QTB_Postal_Code_Mapping_Required__c.field-meta.xml
<CustomField>
    <fullName>QTB_Postal_Code_Mapping_Required__c</fullName>
    <formula>QTB_Legal_Entity__r.QTB_Postal_Code_Mapping_Required__c</formula>
    <label>Postal Code Mapping Required</label>
    <type>Checkbox</type>
</CustomField>