force-app/main/default/objects/QTB_Remit_To__c/fields/QTB_Postal_Code_To__c.field-meta.xml
<CustomField>
    <fullName>QTB_Postal_Code_To__c</fullName>
    <label>Postal Code To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>