force-app/main/default/objects/QTB_Remit_To__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QTB_State__c</columns>
    <columns>QTB_Legal_Entity__c</columns>
    <columns>QTB_Address1__c</columns>
    <columns>QTB_Address2__c</columns>
    <columns>QTB_Address3__c</columns>
    <columns>QTB_City__c</columns>
    <columns>QTB_Country__c</columns>
    <columns>QTB_Default__c</columns>
    <columns>QTB_Province__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>